# mangl

./: .clang-tidy  .editorconfig  AUTHORS  COPYRIGHT  LICENSE.h  README.md  RoadMap.md  TODO.md  apeal.code-workspace  clean-build.mjs  install-src.mjs  mangl.code-workspace
include/apeal/: arithm.hpp  ascii.hpp  assert.hpp  base58.hpp  buffer.hpp  char.hpp  cmdline.hpp  concepts.hpp  console.hpp  containers.hpp  cprep.hpp  data_param.hpp  debug.hpp  def.hpp  deprecated.hpp  empty.hpp  endian.hpp  enum_bitmask.hpp  error.hpp  event.hpp  file.hpp  fs.hpp  geo.hpp  hash.hpp  have.hpp  http.hpp  ignore.hpp  image.hpp  index.hpp  iterator.hpp  lang.hpp  logger.hpp  mutex.hpp  noncopyable.hpp  on_exit.hpp  openssl.hpp  parse.hpp  policy.hpp  printer.hpp  process.hpp  (+21 more)
include/mangl/: ads.h  analytics.h  android.h  animation.h  app.h  audio.h  background.h  blueprint.h  capture.h  debug.h  design.h  dispatch.h  effects.h  environment.h  error.h  file.h  font.h  framework.h  game.h  iap.h  ios.h  layout.h  main.h  main_window.h  mangl.h  memory_info.h  multiplayer.h  multiplayer_packet.h  native.h  network.h  packet.h  parse.h  particles.h  pchheaders.h  resources.h  scene.h  screen.h  social.h  storage.h  texture.h  (+5 more)
samples/common/: common_res.mjs  common_res.yaml  common_sources.cmake  common_sources.yaml  common_sources_gencmake.mjs  gensample.mjs  mangl-samples.win.manifest  project_target.cmake  tests.cmake
samples/file/: load_file.cpp
samples/graphics/: Makefile  build.ninja  genbuild.mjs  tex_gui.hpp  tex_gui_desc.yaml
scripts/: apeal_sources.yaml  gencmake.mjs  mangl_sources.yaml  mangl_sources_console.yaml  tests.cmake  upload-crashlytics.mjs
scripts/clean/: clean_build.mjs  index.mjs
scripts/cmake/: apeal_sources.cmake  current_mangl_config_h.cmake  mangl_sources.cmake  mangl_sources_console.cmake  project_add_target.cmake  project_deps.cmake  project_header.cmake  project_header_inc.cmake  project_inc.cmake  project_link.cmake  project_target.cmake  project_target_executable.cmake  project_target_link.cmake
scripts/genenum/: genres.mjs  genres_result.mjs  index.mjs
scripts/gengradle/: generate_header.mjs  gengradle.d.ts  gengradle_assets.mjs  gengradle_cmake.mjs  gengradle_generate.mjs  gengradle_gradle.mjs  gengradle_java.mjs  gengradle_manifest.mjs  gengradle_res.mjs  gengradle_setup.yaml  gengradle_tools.mjs  gengradle_vars.mjs  index.mjs  lib_fs.mjs  lib_io.mjs  lib_stats.mjs  project_vars.mjs
scripts/gengraphics/: buildfile_generate.mjs  gengraphics.d.ts  index.mjs
scripts/genpacket/: genfuncs.mjs  genfuncs_result.mjs  genpack_generated_objects.mjs  genpacket.d.ts  genpacket_apeal.mjs  genpacket_apeal_build.mjs  genpacket_apeal_load.mjs  genpacket_desc.mjs  genpacket_inc.mjs  genpacket_out.mjs  genpacket_packet.mjs  genpacket_packet_pack.mjs  genpacket_packet_unpack.mjs  genpacket_util.mjs  index.mjs
scripts/genproj/: genproj_cmake.mjs  genproj_config.mjs  genproj_generate.mjs  index.mjs  (+5 more)
src/: apeal_base58.cpp  apeal_cipher_cast128.cpp  apeal_console.cpp  apeal_debug.cpp  apeal_error.cpp  apeal_fs.cpp  apeal_image.cpp  apeal_image_bmp.cpp  apeal_image_convert.cpp  apeal_image_file.cpp  apeal_image_ico.cpp  apeal_image_libjpeg.cpp  apeal_image_libpng.cpp  apeal_image_libtiff.cpp  apeal_image_openjpeg.cpp  apeal_mutex.cpp  apeal_printer.cpp  apeal_process.cpp  apeal_random.cpp  apeal_thread.cpp  apeal_time.cpp  apeal_uid.cpp  apeal_uuid.cpp  apeal_zlib.cpp
tests/archive/zlib/: CMakeLists.txt  gzip-deflate-feed.cpp  gzip-deflate.cpp  gzip-inflate-feed.cpp  gzip-inflate-string.cpp  gzip-inflate.cpp
tests/net/http/client/: CMakeLists.txt  http_download.cpp  http_example.cpp
tests/signal/devel-old/: CMakeLists.txt  sign1.cpp  sign2.cpp  sign3.cpp  sign4.cpp  sign5.cpp  sign6-11.cpp  sign6.cpp  sign7.cpp  sign8-11.cpp  sign8.cpp  sign9-11.cpp
tests/thread/thread/: CMakeLists.txt  thread_func.cpp  thread_method.cpp  thread_move.cpp  thread_overloads.cpp  thread_param.cpp  thread_pthread.cpp
tools/mangl-config/: CMakeLists.txt  README.md  sources.cmake  sources.yaml
tools/mangl-config/src/: cmdline.cpp  main.cpp  mangl_config_processor.cpp  params.h  types.h
tools/mangl-font-render/: CMakeLists.txt  README.md  TODO.md  conanfile.txt  gencmake.mjs  sources.cmake  sources.yaml
tools/mangl-font-render/src/: font_renderer.cpp  font_renderer.h  main.cpp  params.cpp  params.h  types.h
tools/mangl-make-ico/proj/: CMakeLists.txt  Sources.yaml
tools/mangl-make-tex/: CMakeLists.txt  CMakePresets.json  README.md  gencmake.mjs  sources.cmake  sources.yaml  version.hpp
tools/mangl-make-tex/src/: build_deps.cpp  build_desc.cpp  build_header.cpp  build_image.cpp  build_placements.cpp  build_placements_brute_force.cpp  build_placements_rectpack.cpp  cmdline.cpp  dfs_placements.cpp  image_bleed.cpp  image_load.cpp  image_scale.cpp  load_desc.cpp  load_font.cpp  main.cpp  params.h  process.cpp  process_range.cpp  texmake.h  types.h
tools/mangl-make-tex/tests/: genbuild.mjs  gentextures.mjs  make-tex-samples.yaml  tex-torture_16384.mjs  tex-torture_2048.mjs  tex-torture_4096.mjs  tex-torture_8192.mjs  tex-torture_brute_1024.mjs  tex-torture_dfs_1024.mjs  tex_sample_desc_1024.yaml  tex_sample_desc_16384.yaml  tex_sample_desc_2048.yaml  tex_sample_desc_4096.yaml  tex_sample_desc_8192.yaml
tools/mangl-packet-dump/: CMakeLists.txt  gencmake.mjs  sources.cmake  sources.yaml
tools/mangl-packet-dump/src/: main.cpp  packet_dump.cpp  packet_dump.h
tools/mangl-toolkit-wx/: CMakeLists.txt  README.md  gencmake.mjs  sources.cmake  sources.yaml
tools/mangl-toolkit-wx/schema/: main_window_layout_state.yaml  main_window_layout_state_gen.mjs  model_view_state.yaml  model_view_state_gen.mjs  project_files_state.yaml  project_files_state_gen.mjs  screen_layout_state.yaml  screen_layout_state_gen.mjs
tools/mangl-toolkit-wx/src/: central_widget.cpp  central_widget.h  env.hpp  main.cpp  main_application.cpp  main_application.h  main_data.cpp  main_data.h  main_types.hpp  main_window.cpp  main_window.h  mangl_config.h  pubsub.hpp  settings.hpp  state.hpp  theme.hpp
(+1743 files in other folders)
