cmake_minimum_required(VERSION 3.0)

project ( signal_devel )

include ( ../../scripts/common.cmake )

add_executable ( sign1 sign1.cpp )
add_executable ( sign2 sign2.cpp )
add_executable ( sign3 sign3.cpp )
add_executable ( sign4 sign4.cpp )
add_executable ( sign5 sign5.cpp )
add_executable ( sign6 sign6.cpp )
add_executable ( sign6-11 sign6-11.cpp )
add_executable ( sign7 sign7.cpp )
add_executable ( sign8 sign8.cpp )
add_executable ( sign8-11 sign8-11.cpp )
add_executable ( sign9-11 sign9-11.cpp )

